--- a/harmonify/resources/css/app.css
+++ b/harmonify/resources/css/app.css
@@ -22,7 +22,7 @@
     border-radius: 20px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    color: #2b5338;
+    color: #1f1f1f;
     cursor: pointer;
     font-family: "Roboto", arial, sans-serif;
     font-size: 14px;
