--- a/harmonify/resources/css/app.css
+++ b/harmonify/resources/css/app.css
@@ -4,7 +4,8 @@
 
 .backgroundImg {
     /*background-image: url("https://i.pinimg.com/1200x/0b/c8/48/0bc8484b3c326d5630f338c04c58cf14.jpg");*/
-    background-image: linear-gradient(to bottom right, #dae9d9, #aac156);
+    /* background-image: linear-gradient(to bottom right, #dae9d9, #aac156); */
+    background-image: url("/public/svg/background_img.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
